--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>module3-solution</title>
 <style>
 * {
@@ -13,6 +14,8 @@
   width: 100%;
   min-height: 30px;
   overflow: auto;
+  margin: 0px;
+  position: absolute;
 }
 body {
   font-family: arial;
@@ -23,35 +26,29 @@ body {
 </head>
 <body>
   <header>
-  <nav id="header-nav" class="navbar navbar-default">
+   <nav id="header-nav" class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
           <div class="navbar-brand">
             <a href="index.html"><h1>Food, LLC<h1></a>
-          </div>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false" class="float-right">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-           </button>
-           </div>
-        <div id="collapsable-nav" class="collapse navbar-collapse">
-           <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li>
-            <a href="#chicken" class="visible-xs">Chicken</a>
-           </li>
-           <li>
-             <a href="#beef" class="visible-xs">Beaf</a>
-           </li>
-           <li>
-             <a href="#sushi" class="visible-xs">Sushi</a>
-           </li>
-         </ul>
-       </div>
+              </div>
+                <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">
+                 <i class="fa fa-bars"></i>
+                </button>
+                <div id="myDropdown" class="dropdown-content">
+                <a href="#chicken">Chicken</a>
+                <a href="#beef">Beef</a>
+                <a href="#sushi">Sushi</a>
+                </div>
+              </div>
+            </div>
+        </div>
+      </nav>
+      <div class="Our-menu">
+      <h1>Our Menu</h1>
       </div>
-    </nav>
-</header>
-<h1>Our Menu</h1>
+  </header>
 <div class="row">
      <section id="chicken" class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
       <h2>Chicken</h2>
@@ -66,9 +63,7 @@ body {
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean posuere dapibus elementum. Ut vitae nunc mollis, placerat turpis ac, ullamcorper neque. Pellentesque et mi a mauris varius faucibus. Sed imperdiet molestie turpis ac aliquet. Ut eu ante urna. Donec non leo vel quam sagittis fringilla non eu dui. Aliquam et eros ornare, tristique erat quis, suscipit urna. Cras quis porttitor enim.</p>
     </section>
   </div>
-    <!-- jQuery (Bootstrap JS plugins depend on it) -->
-  <script src="js/jquery-2.1.4.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/jquery-3.7.1.slim.min.js"></script>
 </body>
 </html>
